# AlphaAgent

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
agents/: __init__.py  base.py  context_agent.py  critic_agent.py  fundamental_agent.py  macro_agent.py  memo_agent.py  risk_agent.py  signal_agent.py  valuation_agent.py
app/: __init__.py  dashboard.py
app/components/: __init__.py  analysis_panels.py  data_status.py  feedback_panel.py  memo_viewer.py  progress.py
config/: __init__.py  env.py  settings.py
data/: __init__.py  asia_news_loader.py  clients.py  filings_loader.py  fundamentals.py  fx_data.py  market_data.py  mock_data.py  news_loader.py  peer_data.py  transcripts_loader.py  vector_store.py
engine/: __init__.py  memo_formatter.py  rag_processor.py  valuation_model.py
exports/: __init__.py  pdf_export.py
pipelines/: __init__.py  evaluator_pipeline.py  opportunity_pipeline.py  research_graph.py
schemas/: __init__.py  base.py  memo.py  research_state.py  signals.py
storage/: __init__.py  idea_log.py
tests/: conftest.py  test_agents.py  test_rag.py  test_research_graph.py  test_utils.py  test_valuation.py
utils/: __init__.py  citations.py  llm.py  schemas.py  scoring.py  source_summary.py  ticker.py
